Added project and link to LinkedIn

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -43,6 +43,35 @@
                     <div id="main">
                         <div class="project">
                             <div>
+                                <img class="projectIcon" src="../Images/akira.png" alt="Project Image or Icon" />
+                            </div>
+
+                            <div class="projectSum">
+                                <h2>Akira</h2>
+
+                                <p>
+                                    Akira is a Chrome extension for sorting -> viewing -> bookmarking/closing a bunch of tabs open on multiple windows. If you are the type who does not close any Chrome tabs, and opens a new window instead, you can use Akira to view all open tabs, group them by window/site, sort them alphabetically, then close the unnecessary, and bookmark the necessary ones. Akira's story begins with me trying to play a game, on lowest settings, on my friend's laptop, at 10FPS even if the laptop has enough power to run the game at 30FPS. After discovering 15 Chrome windows open with at least 20 tabs open on each window, I decided to make it easier for my friend to manage the tabs, and close the unnecessary ones, so that the laptop doesn't use resources at the same level as a server. Akira is currently in testing, it's unlisted in Chrome Web Store.
+                                </p>
+
+                                <a href="https://github.com/recoskyler/Akira" target="_blank">View On GitHub</a>
+                            </div>
+
+                            <div class="projectSSC">
+                                <a href="../Images/akiraSS1.png" target="_blank"><img class="projectSS" src="../Images/akiraSS1.png"
+                                        alt="Screenshot" /></a>
+                                <a href="../Images/akiraSS2.png" target="_blank"><img class="projectSS" src="../Images/akiraSS2.png"
+                                        alt="Screenshot" /></a>
+                                <a href="../Images/akiraSS3.png" target="_blank"><img class="projectSS" src="../Images/akiraSS3.png"
+                                        alt="Screenshot" /></a>
+                                <a href="../Images/akiraSS4.png" target="_blank"><img class="projectSS" src="../Images/akiraSS4.png"
+                                        alt="Screenshot" /></a>
+                                <a href="../Images/akiraSS5.png" target="_blank"><img class="projectSS" src="../Images/akiraSS5.png"
+                                        alt="Screenshot" /></a>
+                            </div>
+                        </div>
+
+                        <div class="project">
+                            <div>
                                 <img class="projectIcon" src="../Images/budget-icon.png" alt="Project Image or Icon" />
                             </div>
 
@@ -50,9 +79,7 @@
                                 <h2>Budget</h2>
 
                                 <p>
-                                    Budget is a mobile app, which you can use to manage your monthly budget, your fixed payments, and rent/utilities. After 
-                                    I failed to find an easy to use app that doesn't have too many functions that make it difficult to use, I decided to make this app.
-                                    It's currently in internal beta, but I'm planning to release it soon. 
+                                    Budget is a mobile app, which you can use to manage your monthly budget, your fixed payments, and rent/utilities. After I failed to find an easy to use app that doesn't have too many functions that make it difficult to use, I decided to make this app. It's currently in internal beta on Google Play Store, but I'm planning to release it soon. 
                                 </p>
 
                                 <a href="https://github.com/recoskyler/Budget" target="_blank">View On GitHub</a>
@@ -83,8 +110,7 @@
                                 <h2>Sabertooth</h2>
 
                                 <p>
-                                    Sabertooth is a folder organizer, which groups files and folders (you can choose what to group) in a folder, or selected
-                                    folders. It can automatically organize selected folders every 5 or more minutes.
+                                    Sabertooth is a folder organizer, which groups files and folders (you can choose what to group) in a folder, or selected folders. It can automatically organize selected folders every 5 or more minutes.
                                 </p>
 
                                 <a href="https://github.com/recoskyler/Sabertooth" target="_blank">View/Download On GitHub</a>
@@ -111,10 +137,7 @@
                                 <h2>Paws</h2>
 
                                 <p>
-                                    Paws is a FTP server explorer and a backup tool. You can explore files and folders in a FTP server, edit, copy, paste, move
-                                    or search them. You can synchronize folders on your computer with another folder on FTP
-                                    server. You can also stream videos (and subtitles) on FTP server if you have VLC Player,
-                                    without the need of downloading.
+                                    Paws is a FTP server explorer and a backup tool. You can explore files and folders in a FTP server, edit, copy, paste, move or search them. You can synchronize folders on your computer with another folder on FTP server. You can also stream videos (and subtitles) on FTP server if you have VLC Player, without the need of downloading.
                                 </p>
 
                                 <a href="https://github.com/recoskyler/Paws" target="_blank">View/Download On GitHub</a>
@@ -134,7 +157,7 @@
                                 <h2>To-Do List</h2>
 
                                 <p>
-                                    This is a project I made to test and improve my ReactJS skills, after learning JavaScript and ReactJS. I used Google Firebase to keep all the user info, and user tasks online.
+                                    This is a project I made to test and improve my ReactJS skills, after learning JavaScript and ReactJS. I used Google Firebase to store all the user info, and user tasks online.
                                 </p>
 
                                 <a href="https://github.com/recoskyler/to_do_list" target="_blank">View/Download On GitHub</a>
@@ -159,9 +182,7 @@
                                 <h2>HoneyComb</h2>
 
                                 <p>
-                                    This is a program that processes a complex calculation, then returns a statistical result. A friend of mine asked me to write
-                                    this program to help her with a project, which was published in a computer and maths
-                                    magazine.
+                                    This is a program that processes a complex calculation, then returns a statistical result. A friend of mine asked me to write this program to help her with a project, which was published in a computer and maths magazine.
                                 </p>
 
                                 <a href="https://github.com/recoskyler/HoneyComb" target="_blank">View/Download On GitHub</a>
@@ -181,9 +202,7 @@
                                 <h2>Smart Room Control</h2>
 
                                 <p>
-                                    As a result of my laziness, I designed, and built an 'ATMEGA 328P-PU' (Arduino Processor) based room lamp control circuit.
-                                    I can turn on/off lamps in my room with a remote control, or set it to turn on or off
-                                    when someone comes in / goes out, using an ultrasonic distance sensor.
+                                    As a result of my laziness, I designed, and built an 'Atmel ATMEGA 328P-PU' (Arduino Processor) based room lamp control circuit. I can turn on/off lamps in my room with a remote control, or set it to turn on or off when someone comes in / goes out, using an ultrasonic distance sensor.
                                 </p>
                             </div>
 
@@ -201,9 +220,7 @@
                                 <h2>DSLR RGB Macro Ring Light</h2>
 
                                 <p>
-                                    Using a 'Adafruit NeoPixel 24 LED Ring' and an 'ATMEGA 328P-PU' (Arduino Processor), I designed and built a circuit which
-                                    can control the color of each of the 24 LEDs independently, or in half (12 LEDs one color,
-                                    12 LEDs another color), quarter, full fashion.
+                                    Using a 'Adafruit NeoPixel 24 LED Ring' and an 'ATMEGA 328P-PU' (Arduino Processor), I designed and built a circuit which can control the color of each of the 24 LEDs independently, or in half (12 LEDs one color, 12 LEDs another color), quarter, full fashion.
                                 </p>
                             </div>
 
@@ -221,9 +238,7 @@
                                 <h2>Raspberry Pi NAS Server</h2>
 
                                 <p>
-                                    I used a Raspberry Pi 3, 2 HDDs and an open-source software called Open Media Vault to make my own NAS (Network Attached
-                                    Storage) server. I can now access all my files on the server from anywhere on the world,
-                                    where there is internet of course.
+                                    I used a Raspberry Pi 3, 2 HDDs and an open-source software called Open Media Vault to make my own NAS (Network Attached Storage) server. I can now access all my files on the server from anywhere on the world, where there is internet of course.
                                 </p>
                             </div>
 
