--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -77,6 +77,11 @@
                                     <td><img src="../Images/github.png" alt="GitHub" class="contactImg"></td>
                                     <td class="contactInf"><a target="_blank" href="https://github.com/recoskyler">recoskyler</a></td>
                                 </tr>
+
+                                <tr>
+                                    <td><img src="../Images/linkedin.png" alt="LinkedIn" class="contactImg"></td>
+                                    <td class="contactInf"><a target="_blank" href="www.linkedin.com/in/recoskyler">Adil Atalay Hamamcioglu</a></td>
+                                </tr>
                             </table>
                         </div>
                     </div>
