--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -57,15 +57,15 @@
                             </div>
 
                             <div class="projectSSC">
-                                <a href="../Images/akiraSS1.png" target="_blank"><img class="projectSS" src="../Images/akiraSS1.png"
+                                <a href="../Images/akiraSS1.jpg" target="_blank"><img class="projectSS" src="../Images/akiraSS1.jpg"
                                         alt="Screenshot" /></a>
-                                <a href="../Images/akiraSS2.png" target="_blank"><img class="projectSS" src="../Images/akiraSS2.png"
+                                <a href="../Images/akiraSS2.jpg" target="_blank"><img class="projectSS" src="../Images/akiraSS2.jpg"
                                         alt="Screenshot" /></a>
-                                <a href="../Images/akiraSS3.png" target="_blank"><img class="projectSS" src="../Images/akiraSS3.png"
+                                <a href="../Images/akiraSS3.jpg" target="_blank"><img class="projectSS" src="../Images/akiraSS3.jpg"
                                         alt="Screenshot" /></a>
-                                <a href="../Images/akiraSS4.png" target="_blank"><img class="projectSS" src="../Images/akiraSS4.png"
+                                <a href="../Images/akiraSS4.jpg" target="_blank"><img class="projectSS" src="../Images/akiraSS4.jpg"
                                         alt="Screenshot" /></a>
-                                <a href="../Images/akiraSS5.png" target="_blank"><img class="projectSS" src="../Images/akiraSS5.png"
+                                <a href="../Images/akiraSS5.jpg" target="_blank"><img class="projectSS" src="../Images/akiraSS5.jpg"
                                         alt="Screenshot" /></a>
                             </div>
                         </div>
