--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<meta name="theme-color" content="#000000">
+	<meta name="author" content="My personal website, which contains information about me: recoskyler-Adil Atalay Hamamcıoğlu">
+        <meta name="author" content="recoskyler">
+        <meta name="description" content="">
+        <meta name="keywords" content="me,cv,portfolio,about,projects,recoskyler,atalay,hamamcioglu,adil,hamamcıoğlu">
 	<link rel="manifest" href="%PUBdivC_URL%/manifest.json">
 	<link href="https://fonts.googleapis.com/css?family=Raleway:300,400" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./Styles/index.css">
