Changed Wallpaper Added "View Official Page" buttons

--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -54,6 +54,8 @@
                                 </p>
 
                                 <a href="https://github.com/recoskyler/Akira" target="_blank">View On GitHub</a>
+                                <a href="https://chrome.google.com/webstore/detail/aibadljmbjbjogomfgkoaoaighnmdghp" target="_blank">Add To Google Chrome</a>
+                                <a href="https://akira.recoskyler.com" target="_blank">View Official Page</a>
                             </div>
 
                             <div class="projectSSC">
@@ -83,6 +85,7 @@
                                 </p>
 
                                 <a href="https://github.com/recoskyler/Budget" target="_blank">View On GitHub</a>
+                                <a href="https://budget.recoskyler.com" target="_blank">View Official Page</a>
                             </div>
 
                             <div class="projectSSC">
@@ -114,6 +117,7 @@
                                 </p>
 
                                 <a href="https://github.com/recoskyler/Sabertooth" target="_blank">View/Download On GitHub</a>
+                                <a href="https://sabertooth.recoskyler.com" target="_blank">View Official Page</a>
                             </div>
 
                             <div class="projectSSC">
@@ -141,6 +145,7 @@
                                 </p>
 
                                 <a href="https://github.com/recoskyler/Paws" target="_blank">View/Download On GitHub</a>
+                                <a href="https://paws.recoskyler.com" target="_blank">View Official Page</a>
                             </div>
 
                             <div class="projectSSC">
