--- a/Pages/projects.html
+++ b/Pages/projects.html
@@ -86,6 +86,7 @@
 
                                 <a href="https://github.com/recoskyler/Budget" target="_blank">View On GitHub</a>
                                 <a href="https://budget.recoskyler.com" target="_blank">View Official Page</a>
+                                <a href="https://play.google.com/apps/testing/com.recoskyler.budget" target="_blank">Become A Beta Tester</a>
                             </div>
 
                             <div class="projectSSC">
