--- a/Pages/contact.html
+++ b/Pages/contact.html
@@ -75,12 +75,12 @@
 
                                 <tr>
                                     <td style="border-top:1px solid #AAA; border-bottom:1px solid #AAA"><img src="../Images/github.png" alt="GitHub" class="contactImg"></td>
-                                    <td class="contactInf"><a target="_blank" href="https://github.com/recoskyler">recoskyler</a></td>
+                                    <td style="border-top:1px solid #AAA; border-bottom:1px solid #AAA" class="contactInf"><a target="_blank" href="https://github.com/recoskyler">recoskyler</a></td>
                                 </tr>
 
                                 <tr>
                                     <td style="border-top:1px solid #AAA; border-bottom:1px solid #AAA"><img src="../Images/linkedin.png" alt="LinkedIn" class="contactImg"></td>
-                                    <td class="contactInf"><a target="_blank" href="www.linkedin.com/in/recoskyler">Adil Atalay Hamamcioglu</a></td>
+                                    <td style="border-top:1px solid #AAA; border-bottom:1px solid #AAA" class="contactInf"><a target="_blank" href="www.linkedin.com/in/recoskyler">Adil Atalay Hamamcioglu</a></td>
                                 </tr>
                             </table>
                         </div>
